kubernetes/policies/network/allow-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-required-traffic
  namespace: image-processing
spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress

  ingress:
    # komunikacja wewnątrz namespace
    - from:
        - podSelector: {}

    # Prometheus -> actuator/prometheus
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 8081

  egress:
    # DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    # Google APIs: Pub/Sub, GCS itd.
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 443

    # Cloud SQL DEV private IP
    - to:
        - ipBlock:
            cidr: 10.254.0.3/32
      ports:
        - protocol: TCP
          port: 5432

    # GKE metadata server / Workload Identity
    - to:
        - ipBlock:
            cidr: 169.254.169.252/32
      ports:
        - protocol: TCP
          port: 987
        - protocol: TCP
          port: 988

    - to:
        - ipBlock:
            cidr: 169.254.169.254/32
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 8080
