kubernetes/policies/network/default-deny-dev.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: image-processing
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
