kubernetes/policies/network/default-deny-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: image-processing-prod
spec:
  podSelector: {}

  policyTypes:
    - Ingress
    - Egress
